# shape_based_matching_subpixel-master

./: .gitignore  Gradient_Response_Maps_中文译读版.docx  Transforms_in_shape_based_matching_中文译解.docx
shape_based_matching-subpixel/: shape_based_matching-subpixel.sln
shape_based_matching-subpixel/python_subpixel_demo/: CMakeLists.txt  README.md  sbm_subpixel.cp310-win_amd64.pyd  subpixel_pybind.cpp  test_subpixel.py
shape_based_matching-subpixel/shape_based_matching-subpixel/: Untitled-1.md  case2_smoke.txt  demo.ini  detector.cpp  detector.h  line2Dup.cpp  line2Dup.hpp  linemod.cpp  linemod.hpp  match.h  openCV410.props  openCV410d.props  shape_based_matching-subpixel.cpp  shape_based_matching-subpixel.vcxproj  shape_based_matching-subpixel.vcxproj.filters  test.cpp
shape_based_matching-subpixel/shape_based_matching-subpixel/cuda_icp/: icp.cpp
shape_based_matching-subpixel/shape_based_matching-subpixel/test/case0-1/: circle_info.yaml  circle_templ.yaml
shape_based_matching-subpixel/shape_based_matching-subpixel/test/case1/: test_templ.yaml
shape_based_matching-subpixel/shape_based_matching-subpixel/test/case2/: test_templ.yaml
shape_based_matching-subpixel/shape_based_matching-subpixel/test/mycase/: config.yaml  config_context.yaml  cross_context_info.yaml  cross_context_templ.yaml  cross_info.yaml  cross_templ.yaml
shape_based_matching-subpixel/shape_based_matching-subpixel/x64/Debug/: shape_based_matching-subpixel.exe.recipe  shape_based_matching-subpixel.pch  shape_based_matching-subpixel.vcxproj.FileListAbsolute.txt  vc143.idb
(+44 files in other folders)
